# 20240815
- Implemented message migrate (DRAFT)
- Implemented thread migrate (DRAFT)
- Implemented GuildForum migrate (DRAFT)

# 20240817
- Added error handling in `ChannelHistory` iteration (DRAFT)
- Split send long message (DRAFT)
- Added "replied" section to messages (DRAFT)
- GuildText migrate (DRAFT)